Added supervisor, and java opts